fixing jumping css

--- a/src/app/core/shared/components/animated-background/animated-background.component.css
+++ b/src/app/core/shared/components/animated-background/animated-background.component.css
@@ -12,7 +12,7 @@
 }
 
 #animate-area {
-  position: absolute;
+  position: fixed;
   width: 100%;
   height: var(--new-height);
   background-image: resolve('images/home-background.png');
